# python

./: .gitignore  LICENSE  README.md  _prompt.md
AI/: CodeBin-Creation-Prompts.md  CodeBin-FULL-Prompt.md  project_ideas.md  prompt.md
FastAPI/htmx_fastapi_demo/: .gitignore  README.md  pyproject.toml
FastAPI/htmx_fastapi_demo/src/app/: config.py  main.py  schemas.py  services.py
FastAPI/htmx_fastapi_demo/src/core/: logging_config.py
FastAPI/htmx_fastapi_demo/src/web/: routes.py
FastAPI/htmx_fastapi_demo/src/web/templates/: base.html  index.html
FastAPI/htmx_fastapi_demo/src/web/templates/partials/: item.html
FastAPI/htmx_fastapi_demo/static/css/: styles.css
Human/Docs/: Windows - Venv & Dependencies.md
Human/Scripts/: file-copy.py
LLM/Adventure-Game/: adventure-game.py
LLM/Docs/: CLI App Prompt.md  Linux - Venv & Dependencies.md  Project Ideas.md  Textual TUI Project Ideas.md  Windows - Venv & Dependencies.md  _CLI App Prompt.md  _Prompt.md  _Textual TUI Project Ideas.md
Scripts/: file-copy.py
ai/: chatbots.py  cli_app_guide.md  prompt.md  rich_cli_template.py
archive/: _prompt.md
archive/ai/: chatbots.py  cli_app_guide.md
archive/hacking/: prompt.md
archive/windows/: windows_setup.py
code/cli/: README.md
code/modues/: README.md
code/scripts/: organize_videos.py
hacking/: prompt.md
linux/: OpenSUSE.sh  alma.sh  rocky.sh
linux/alpine/: alpine.sh
linux/arch/: arch.sh
linux/debian/: debian-extras.sh  debian-full.sh  (+1 more)
macos_scripts/: python-dev-setup.py
snake/: snake.py  snake_highscores.json
windows/: windows_setup.py
(+133 files in other folders)
